--- a/style.css
+++ b/style.css
@@ -1,20 +1,107 @@
 *{
-
+    margin: 0;
+    padding: 0;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 .Nav-bar{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 30%;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    padding: 30px 0 30px 0;
+}
+.div-btn{
+    display: flex;
+    gap: 40px;
+}
 
+.div-btn button{
+    width: 150px;
+    height: 50px;
+    border: 1px solid;
+    border-radius: 15px;
+    background-color: transparent;
+    font-size: 15px;
 }
 
 .SectionBook{
+    width: 100%;
+    height: 70%;
+    display: flex;
+    flex-direction: row;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+}
 
+.Form-Books{
+    width: 400px;
+    height: 600px;
+    border: 1px solid;
+    border-radius: 15px;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+    gap: 40px;
+    
+}
+
+.div-form{
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+}
+
+.div-input{
+    width: 250px;
+    height: 40px;
+    border: 1px solid;
+    border-radius: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+.div-input input{
+    width: 240px;
+    border: none;
+    background-color: transparent;
+}
+.div-Books{
+    width: 800px;
+    height: 600px;
+    border: 1px solid;
+    border-radius: 15px;
+    padding: 20px;
 }
 
 .SectionClient{
-
+    width: 100%;
+    height: 70%;
 }
 
 .SectionReserve{
-
+    width: 100%;
+    height: 70%;
 }
 
+.btn-register-book{
+    width: 200px;
+    height: 40px;
+    border: 1px solid;
+    border-radius: 15px;
+    background-color: transparent;
+    cursor: pointer;
+}
