--- a/style.css
+++ b/style.css
@@ -86,7 +86,25 @@
     border-radius: 15px;
     padding: 20px;
 }
+.Book{
+    width: 200px;
+    height: 200px;
+    border: 1px solid;
+    border-radius: 15px;
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
+.div-btn-book{
 
+}
+
+.div-btn-book button{
+    
+}
 .SectionClient{
     width: 100%;
     height: 70%;
