--- a/style.css
+++ b/style.css
@@ -39,6 +39,7 @@
     align-items: center;
     gap: 20px;
 }
+.Form-Rent,
 .Form-Client,
 .Form-Books{
     width: 400px;
@@ -88,6 +89,7 @@
     border-radius: 15px;
     padding: 20px;
 }
+.div-Rent,
 .div-Books{
     width: 700px;
     height: 600px;
@@ -99,6 +101,8 @@
     gap: 10px;
     overflow-y: scroll;
 }
+
+.Rent,
 .Book{
     width: 200px;
     height: 250px;
@@ -125,6 +129,7 @@
     background: transparent;
     cursor: pointer;
 }
+.div-update-Rent,
 .div-update-Client,
 .div-update-Books{
     position: fixed;
@@ -162,6 +167,7 @@
     align-items: center;
 
 }
+.div-Delete-rent,
 .div-Delete-Client,
 .div-Delete-Books{
     position: fixed;
@@ -199,7 +205,7 @@
     gap: 20px;
 }
 
-.SectionReserve{
+.SectionRent{
     width: 100%;
     height: 70%;
     display: flex;
@@ -210,6 +216,8 @@
     gap: 20px;
 }
 
+.btn-Update-Rent,
+.btn-register-Rent,
 .btn-register-Client,
 .btn-Update-book,
 .btn-register-book{
